# LoversOfMen

./: .readthedocs.yaml  README.md  findBlockCoordinate.cpp
Integration/: CMakeLists.txt  package.xml
Integration/install/: local_setup.sh  setup.sh
Integration/install/Integration/share/Integration/cmake/: IntegrationConfig.cmake
Integration/log/: latest_build
Integration/src/: Publish.cpp
Perception/: CMakeLists.txt  package.xml
Perception/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Perception/log/: latest_build
Perception/src/: findBlockCoordinates.cpp  refdet.cpp
Perception/test_package/: package.xml
Perception/test_package/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
Perception/test_package/log/: latest_build
Traj_Control/: README.md
Traj_Control/MTC/: CMakeLists.txt  package.xml
Traj_Control/MTC/launch/: mtc_test.launch.py
Traj_Control/mtc/: CMakeLists.txt  README.md  Testing blocks.txt  package.xml
Traj_Control/mtc/config/: kinematics.yaml
Traj_Control/mtc/launch/: mtc.launch.py  test.launch.py
Traj_Control/mtc/src/: main.cpp  mtc_task.cpp  mtc_task.hpp  test_exec.cpp  test_exec.hpp  test_main.cpp
Traj_Control/test/: CMakeLists.txt  package.xml
Traj_Control/test/launch/: mtc_test.launch.py
Traj_Control/test/src/: main.cpp  mtc_task.cpp  mtc_task.hpp  test.cpp
Traj_Control/ur3e_moveit_config/: CMakeLists.txt  package.xml
Traj_Control/ur3e_moveit_config/config/: ompl_planning.yaml  ur3e.urdf
Traj_Control/ur3e_moveit_config/launch/: ur_moveit.launch.py
Traj_Control/ur3e_rg2_control/: CMakeLists.txt  package.xml
Traj_Control/ur3e_rg2_control/config/: ur_onrobot_controllers.yaml
Traj_Control/ur3e_rg2_control/config/ur3e/: joint_limits.yaml  visual_parameters.yaml
Traj_Control/ur3e_rg2_control/launch/: rsp.launch.py  start_robot.launch.py
Traj_Control/ur3e_rg2_control/urdf/: ur3e_rg2_controlled.urdf.xacro
Traj_Control/ur3e_rg2_description/: CMakeLists.txt  package.xml
Traj_Control/ur3e_rg2_description/launch/: view_robot.launch.py
Traj_Control/ur3e_rg2_description/rviz/: urdf.rviz
Traj_Control/ur3e_rg2_description/urdf/: ur3e_rg2.urdf.xacro  ur3e_rg2_macro.xacro
Traj_Control/ur3e_rg2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Traj_Control/ur3e_rg2_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur3e_rg2.ros2_control.xacro  ur3e_rg2.srdf  ur3e_rg2.urdf.xacro  ur_onrobot.srdf  ur_onrobot.urdf.xacro
Traj_Control/ur3e_rg2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_onrobot_moveit.launch.py  warehouse_db.launch.py
Traj_Control/ur3e_rg2_moveit_config/rviz/: view_robot.rviz
Traj_Control/ur3e_rg2_moveit_config/srdf/: ur_onrobot.srdf.xacro  ur_onrobot_macro.srdf.xacro
custom_msgs/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/integration/share/ament_index/resource_index/package_run_dependencies/: integration
install/integration/share/integration/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/perception/share/ament_index/resource_index/package_run_dependencies/: perception
install/perception/share/perception/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/perception/share/perception/cmake/: perceptionConfig.cmake
integration/: CMakeLists.txt
integration/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
integration/install/Integration/share/Integration/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
integration/install/integration/share/integration/: local_setup.sh  package.ps1  package.sh
integration/log/: latest_build
integration/src/: LetterSort.cpp  PosePublisher.cpp  PoseSubscriber.cpp  Publish.cpp  coordinates_publisher.cpp
log/: latest_build  latest_list
rg2_gripper_control/: CMakeLists.txt  package.xml
rg2_gripper_control/src/: rg2_control_node.cpp
ur3-realsense-gui/: README.md  requirements.txt
ur3-realsense-gui/src/controllers/: __init__.py  realsense_controller.py  ur3_controller.py
ur3-realsense-gui/src/gui/: __init__.py  main_window.py  styles.py
ur3-realsense-gui/src/services/: __init__.py  realsense_service.py  ur3_service.py
ur3-realsense-gui/src/utils/: __init__.py  helpers.py
