<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>
    A ROS 2 node for shape‐based object detection using OpenCV and cv_bridge.
  </description>

  <maintainer email="alexander.vergara@example.com">Alexander Vergara</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- OpenCV is pulled in by cv_bridge via CMake -->
  
  <export>
    <build_type>ament_cmake</build_type><!-- Other tools can request information here -->
  </export>
</package>
